# AuthHub

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SSO_IMPLEMENTATION_SUMMARY.md  docker-compose-db.test.yml  docker-compose-production.yml  docker-compose.yml  docker-entrypoint.sh
backend/: .env.example  .gitignore  ALEMBIC.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  06d0a101ef2e_增加拼音的_name_字段.py  179bfd31bc27_migrate_user_id_to_feishu_user_id.py  836823124d94_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/auth/: feishu.py  router.py
backend/app/core/: cache.py  config.py  database.py  dependencies.py  logger.py  pubsub.py  security.py
backend/app/models/: __init__.py  audit_log.py  permission.py  resource_binding.py  role.py  route_pattern.py  system.py  user.py  user_role.py
backend/app/rbac/: __init__.py  notifier.py  router.py  service.py
backend/app/schemas/: auth.py  rbac.py  system.py  user.py
backend/app/systems/: __init__.py  router.py  service.py
backend/app/users/: __init__.py  permission_collector.py  router.py  service.py
backend/scripts/: __init__.py  generate_keys.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: README.md  TESTING_DATABASES.md  authentication-implementation.md  cloudrun-db-connection-options.md  deployment-cloudrun.md  migration-user-id-to-feishu-user-id.md  sso-integration-guide.md
frontend/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
(+125 files in other folders)
